src/test/deca/context/valid/with_object/binary_op_neq_with_two_class.deca
class A{}
class B{}

{
    A a = new A();
    B b = new B();
    a != b;
}