src/test/deca/context/invalid/with_object/instanceof_op_wrong_right4.deca
{
    A a = new A();
    a instanceof boolean;
}